header overflowing issue solved

--- a/styles/habit.css
+++ b/styles/habit.css
@@ -1,4 +1,5 @@
 .habits {
+  margin-top: 50px;
   margin-bottom: 100px;
   text-align: center;
 }
@@ -25,6 +26,7 @@
 
 @media (max-width: 576px) {
   .habits {
+    margin-top: 10px;
     margin-bottom: 60px;
   }
 
